Добавлен разработчик в файл Состав.md

--- a/Project/Team/Состав.md
+++ b/Project/Team/Состав.md
@@ -1,2 +1,5 @@
 В состав группы разработки входят:
 1) chrom-ist (Коваленко Александр)
+2) LolkaOpka(Белошицкий Роман)
+Разработанная программа призвана помочь с учетом научной деятельности преподавателей
+ВУЗов
